--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio for a designer and developer. Let's create an amazing website together!">
+    <meta name="keywords" content="Website, Designer, Developer">
     <title>Wallin Design</title>
   </head>
   <body>
