feat: REDESIGN START

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Website, Designer, Developer">
     <title>Wallin Design</title>
   </head>
-  <body>
+  <body style="margin: 0;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
